--- a/cocoapods/README
+++ b/cocoapods/README
@@ -14,3 +14,11 @@ If you have previously created a Mobile Application:
 * Click the name of your mobile app,
 * choose Installation from the Settings section in the left nav, and
 * download the New Relic agent for your platform and follow the instructions.
+
+UPGRADING
+
+To upgrade New Relic SDK, completely replace the NewRelicAgent.framework folder in your app directory with the version included in this file, then clean and build your app.
+
+RELEASE NOTES
+
+Please refer to https://docs.newrelic.com/docs/release-notes/mobile-release-notes/xcframework-release-notes for the latest release notes.
